# 2024_vision_secondtest

./: README.md
Gazebo_homework/: README.md
Gazebo_homework/ignition_ws/install/: local_setup.sh  setup.sh
Gazebo_homework/ignition_ws/install/my_ignition_demo/lib/my_ignition_demo/: myrobot_follow
Gazebo_homework/ignition_ws/install/my_ignition_demo/share/my_ignition_demo/: local_setup.dsv  package.sh
Gazebo_homework/ignition_ws/log/: latest_build
Gazebo_homework/ignition_ws/src/my_ignition_demo/: CMakeLists.txt
Gazebo_homework/ignition_ws/src/my_ignition_demo/config/: params.yaml
Gazebo_homework/ignition_ws/src/my_ignition_demo/include/my_ignition_demo/: myrobot_follow.hpp
Gazebo_homework/ignition_ws/src/my_ignition_demo/launch/: myrobot_follow.rviz
Gazebo_homework/ignition_ws/src/my_ignition_demo/src/: myrobot_follow.cpp
Kalmanfilter_homework/: KFdemo.py  random_speeds100_2023-08-08_20-38-46.json  卡尔曼滤波作业.md
OpenCV_homework/: README.md  main.py  utiles.py
OpenCV_homework/testvideo/: Readme.txt
ROS2TF2andCpp_homework/: README.md
ROS2TF2andCpp_homework/CPPHW/: Cpphw  Cpphw.cpp  Cpphw.h  Cpphwmain.cpp
ROS2TF2andCpp_homework/ROSHW_ws/install/: local_setup.sh  setup.sh
ROS2TF2andCpp_homework/ROSHW_ws/install/buffertransform/lib/buffertransform/: buffertransform
ROS2TF2andCpp_homework/ROSHW_ws/install/buffertransform/share/buffertransform/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS2TF2andCpp_homework/ROSHW_ws/install/hero_description/share/hero_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh
ROS2TF2andCpp_homework/ROSHW_ws/install/learning_tf2_cpp/lib/learning_tf2_cpp/: hero_tf2_listener
ROS2TF2andCpp_homework/ROSHW_ws/install/learning_tf2_cpp/share/learning_tf2_cpp/: package.sh  package.zsh
ROS2TF2andCpp_homework/ROSHW_ws/log/: latest_build
ROS2TF2andCpp_homework/ROSHW_ws/src/buffertransform/: CMakeLists.txt
ROS2TF2andCpp_homework/ROSHW_ws/src/buffertransform/include/buffertransform/: buffertransform.hpp
ROS2TF2andCpp_homework/ROSHW_ws/src/buffertransform/src/: buffertransform.cpp
ROS2TF2andCpp_homework/ROSHW_ws/src/hero_description/: CMakeLists.txt  readme.md
ROS2TF2andCpp_homework/ROSHW_ws/src/hero_description/meshes/: camera_link.STL  odom_link.STL
ROS2TF2andCpp_homework/ROSHW_ws/src/learning_tf2_cpp/: CMakeLists.txt
ROS2TF2andCpp_homework/ROSHW_ws/src/learning_tf2_cpp/src/: hero_tf2_listener.cpp
ROS2TF2andCpp_homework/ROSHW_ws/src/mine_pubsub/: CMakeLists.txt
ROS2TF2andCpp_homework/ROSHW_ws/src/mine_pubsub/config/: params.yaml
ROS2TF2andCpp_homework/ROSHW_ws/src/mine_pubsub/include/mine_pubsub/: publisher_oreyard.hpp  subscriber_miner.hpp
ROS2TF2andCpp_homework/ROSHW_ws/src/mine_pubsub/src/: publisher_oreyard.cpp  subscriber_miner.cpp
ROS2TF2andCpp_homework/ROSHW_ws/src/my_interfaces/: package.xml
Yolo_homework/: README.md  datasetdepart.py
软件_丁利_Gazebo作业/ignition_ws/install/: local_setup.sh  setup.sh
软件_丁利_Gazebo作业/ignition_ws/log/: latest_build
软件_丁利_Gazebo作业/ignition_ws/src/my_ignition_demo/src/: myrobot.sdf  myrobot_follow.cpp  myworld.sdf
软件_丁利_OpenCV作业/: demo.py
软件_丁利_ROS2andCpp作业/CPPHW/: Cpphw.cpp  Cpphw.h  Cpphwmain.cpp
软件_丁利_ROS2andCpp作业/ROSHW_ws/install/: local_setup.sh  setup.sh
软件_丁利_ROS2andCpp作业/ROSHW_ws/log/: latest_build
软件_丁利_ROS2andCpp作业/ROSHW_ws/src/buffertransform/src/: buffertransform.cpp
软件_丁利_ROS2andCpp作业/ROSHW_ws/src/hero_description/launch/: view_model.launch.py
软件_丁利_ROS2andCpp作业/ROSHW_ws/src/hero_description/meshes/: imu_link.STL
软件_丁利_ROS2andCpp作业/ROSHW_ws/src/hero_description/urdf/: hero_description.urdf
软件_丁利_ROS2andCpp作业/ROSHW_ws/src/learning_tf2_cpp/: CMakeLists.txt  package.xml
软件_丁利_ROS2andCpp作业/ROSHW_ws/src/learning_tf2_cpp/include/learning_tf2_cpp/: hero_tf2_listener.hpp
软件_丁利_ROS2andCpp作业/ROSHW_ws/src/learning_tf2_cpp/src/: hero_tf2_listener.cpp
软件_丁利_ROS2andCpp作业/ROSHW_ws/src/mine_pubsub/: package.xml
软件_丁利_ROS2andCpp作业/ROSHW_ws/src/mine_pubsub/config/: params.yaml
软件_丁利_ROS2andCpp作业/ROSHW_ws/src/mine_pubsub/include/mine_pubsub/: publisher_oreyard.hpp  subscriber_miner.hpp
软件_丁利_ROS2andCpp作业/ROSHW_ws/src/mine_pubsub/launch/: mine_pubsub.launch.py
软件_丁利_ROS2andCpp作业/ROSHW_ws/src/mine_pubsub/src/: publisher_oreyard.cpp  subscriber_miner.cpp
软件_丁利_ROS2andCpp作业/ROSHW_ws/src/my_interfaces/: CMakeLists.txt
软件_丁利_ROS2andCpp作业/ROSHW_ws/src/my_interfaces/srv/: Digging.srv
软件_丁利_Yolo作业/dataset/: 2023_8_10_8_51_58_403.txt  2023_8_10_8_52_11_66.txt  2023_8_10_8_52_15_965.txt  2023_8_10_8_52_17_445.txt  2023_8_10_8_52_20_498.txt  2023_8_10_8_52_22_632.txt  2023_8_10_8_52_25_277.txt  2023_8_10_8_52_27_606.txt  2023_8_10_8_52_28_675.txt  2023_8_10_8_52_2_339.txt  2023_8_10_8_52_32_302.txt  2023_8_10_8_52_34_372.txt  2023_8_10_8_52_35_349.txt  2023_8_10_8_52_37_786.txt  2023_8_10_8_52_39_414.txt  2023_8_10_8_52_45_620.txt  2023_8_10_8_52_47_690.txt  2023_8_10_8_52_50_321.txt  2023_8_10_8_52_52_501.txt  2023_8_10_8_52_53_361.txt  2023_8_10_8_52_55_328.txt  2023_8_10_8_52_58_294.txt  2023_8_10_8_52_59_256.txt  2023_8_10_8_52_7_201.txt  2023_8_10_8_52_9_54.txt  2023_8_10_8_53_14_110.txt  2023_8_10_8_53_17_200.txt  2023_8_10_8_53_19_360.txt  2023_8_10_8_53_20_142.txt  2023_8_10_8_53_23_59.txt  2023_8_10_8_53_25_7.txt  2023_8_10_8_53_27_251.txt  2023_8_10_8_53_2_776.txt  2023_8_10_8_53_30_384.txt  2023_8_10_8_53_33_490.txt  2023_8_10_8_53_3_511.txt  2023_8_10_8_53_53_211.txt  2023_8_10_8_53_55_858.txt  2023_8_10_8_53_57_152.txt  2023_8_10_8_53_59_114.txt  (+51 more)
软件_丁利_卡尔曼滤波作业/: README.md
(+182 files in other folders)
